backend/k8s/00-namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: educore
  labels:
    name: educore
